[MODEBSNET-51] - Update to Java 17./Update the module to Spring boot v3.0.0 and identify issues. (#69)
* [MODEBSNET-51] - Update to Java 17

* [MODEBSNET-51] - Fully update to Java 17

* [MODEBSNET-51] - Update the module to Spring boot v3.0.0 and identify issues

* MODEBSNET-51 excluded unnecessary dependency

* [MODEBSNET-51] - Update the module to Spring boot v3.0.0 and identify issues

* [MODEBSNET-51] - Update the module to Spring boot v3.0.0 and identify issues removed unessary dependency

* [MODEBSNET-51] - Update the module to Spring boot v3.0.0 and identify issues removed unessary dependency version

Co-authored-by: siarhei hrabko <siarhei_hrabko@epam.com>